[AI Fix] (a11y ADA compliance): set blockquote text color to #757575 for WCAG contrast

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -151,7 +151,7 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: $grey-color;
+  color: #757575;
   border-left: 4px solid $grey-color-light;
   padding-left: math.div($spacing-unit, 2);
   @include relative-font-size(1.125);
